use git arraysaslist